fix: Correct collapse behavior

--- a/src/css/_includes/sidebar.scss
+++ b/src/css/_includes/sidebar.scss
@@ -45,10 +45,11 @@
 }
 
 [data-sidebar-branch] [data-sidebar-branch] > [data-sidebar-tree] {
+  display: none;
   margin-bottom: 0;
 }
 
-[data-sidebar-branch].toc-active > [data-sidebar-tree] {
+[data-sidebar-branch].toc-visible > [data-sidebar-tree] {
   display: block;
 }
 
